@@ -337,7 +337,7 @@ int JackClient::StartThread()
     // Will do "something" on OSX only...
     fThread.SetParams(GetEngineControl()->fPeriod, GetEngineControl()->fComputation, GetEngineControl()->fConstraint);
 
-    if (fThread.Start() < 0) {
+    if (fThread.StartSync() < 0) {
         jack_error("Start thread error");
         return -1;
     }
@@ -592,6 +592,27 @@ void JackClient::ShutDown()
 // Transport management
 //----------------------
 
+inline int JackClient::ActivateAux()
+{
+    // If activated without RT thread...
+    if (IsActive() && fThread.GetStatus() != JackThread::kRunning) {
+    
+        jack_log("ActivateAux");
+    
+        // RT thread is started
+        if (StartThread() < 0)
+            return -1;
+        
+        int result = -1;
+        GetClientControl()->fCallback[kRealTimeCallback] = IsRealTime();
+        fChannel->ClientActivate(GetClientControl()->fRefNum, IsRealTime(), &result);
+        return result;
+        
+    } else {
+        return 0;
+    }
+}
+
 int JackClient::ReleaseTimebase()
 {
     int result = -1;
@@ -610,29 +631,30 @@ int JackClient::SetSyncCallback(JackSyncCallback sync_callback, void* arg)
     GetClientControl()->fTransportSync = (fSync != NULL);
     fSyncArg = arg;
     fSync = sync_callback;
-    return 0;
-}
-
-int JackClient::SetSyncTimeout(jack_time_t timeout)
-{
-    GetEngineControl()->fTransport.SetSyncTimeout(timeout);
-    return 0;
+    return ActivateAux();
 }
 
 int JackClient::SetTimebaseCallback(int conditional, JackTimebaseCallback timebase_callback, void* arg)
 {
     int result = -1;
     fChannel->SetTimebaseCallback(GetClientControl()->fRefNum, conditional, &result);
-    jack_log("SetTimebaseCallback result = %ld", result);
+    
     if (result == 0) {
         GetClientControl()->fTransportTimebase = true;
         fTimebase = timebase_callback;
         fTimebaseArg = arg;
+        return ActivateAux();
     } else {
         fTimebase = NULL;
         fTimebaseArg = NULL;
+        return -1;
     }
-    return result;
+}
+
+int JackClient::SetSyncTimeout(jack_time_t timeout)
+{
+    GetEngineControl()->fTransport.SetSyncTimeout(timeout);
+    return 0;
 }
 
 // Must be RT safe
